sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but '=' found.
		for (i=0 to GetNombreValeurs-2)
                      ^AlgBubbleSort1:12: error: illegal start of simple expression
	}	          
        ^